--- a/.openzeppelin/project.json
+++ b/.openzeppelin/project.json
@@ -8,10 +8,19 @@
   "name": "decentralight",
   "version": "0.1.0",
   "compiler": {
+    "compilerSettings": {
+      "optimizer": {
+        "enabled": false,
+        "runs": "200"
+      }
+    },
+    "typechain": {
+      "enabled": false
+    },
     "manager": "openzeppelin",
     "solcVersion": "0.5.17",
-    "compilerSettings": {
-      "optimizer": {}
-    }
-  }
+    "artifactsDir": "build/contracts",
+    "contractsDir": "contracts"
+  },
+  "telemetryOptIn": false
 }
